--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -5,6 +5,7 @@
     <!-- Navbar brand -->
     <a class="navbar-brand" href="/#/dashboard">Reservas</a>
     <a class="navbar-brand" href="/#/reportes">Reportes</a>
+    <a class="navbar-brand" href="/#/vincular">Vincular</a>
     <!-- Toggle button -->
     <!-- Collapsible wrapper -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent" >
