--- a/src/app/pages/modal/registro/registro.component.html
+++ b/src/app/pages/modal/registro/registro.component.html
@@ -52,7 +52,7 @@
     <div class="form-group row">
       <label for="input"  class="col-sm-2 col-form-label">Observaciones:</label>
       <div class="col-sm-10">
-        <textarea  ngModel class="form-control" [ngClass]="{'is-invalid': f.submitted&&f.controls['observaciones'].errors}" name="observaciones"  placeholder="Ingrese sus observaciones"></textarea>
+        <textarea  ngModel class="form-control" [ngClass]="{'is-invalid': f.submitted&&f.controls['commentary_client'].errors}" name="commentary_client"  placeholder="Ingrese sus observaciones"></textarea>
       </div>
     </div>
     <div class="form-group row" *ngIf="tipo=='RESERVA'">
